[package]
name = "caspersign-contract"
version = "0.1.0"
authors = ["marcin <marcin@chronologic.network>"]
edition = "2018"

[dependencies]
contract = { package = "casper-contract", version="1.1.1" }
types = { package = "casper-types", version="1.1.1" }

[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["contract/std", "types/std"]
